--- a/web/src/styles/_base.scss
+++ b/web/src/styles/_base.scss
@@ -124,6 +124,13 @@ body {
   align-items: center;
 }
 
+.m-auto {
+  margin: 0 auto;
+}
+.align-center {
+  align-items: center;
+}
+
 /** Colorscheme */
 .text1 {
   color: var(--text1);
