--- a/web/src/layouts/Post/Post.astro
+++ b/web/src/layouts/Post/Post.astro
@@ -137,6 +137,10 @@ content = content.replace(/ASTRO_ESCAPED_LEFT_CURLY_BRACKET/g, '{')
     padding: 0 var(--gap);
     text-decoration: none;
   }
+  a.footnote-back {
+    text-decoration: none;
+    margin-bottom: 0;
+  }
 
   img {
     max-width: 100%;
@@ -170,7 +174,6 @@ content = content.replace(/ASTRO_ESCAPED_LEFT_CURLY_BRACKET/g, '{')
     */
   p > code,
   li > code {
-    font-size: 100%;
     padding: var(--gap) calc(var(--gap) * 1.5 );
     background-color: var(--surface3);
     border-radius: var(--gap);
@@ -190,7 +193,7 @@ content = content.replace(/ASTRO_ESCAPED_LEFT_CURLY_BRACKET/g, '{')
   }
 
   ol li::marker {
-    font-size: 1.2rem;
+    font-size: 1.0rem;
   }
 
   ul li::marker {
@@ -288,7 +291,7 @@ content = content.replace(/ASTRO_ESCAPED_LEFT_CURLY_BRACKET/g, '{')
   }
 
     hr {
-      margin: 1em 0em;
+      margin: 2em 0em;
       border: 0;
       height: 1px;
       background-image: radial-gradient(circle at center, var(--surface4),transparent)
@@ -301,6 +304,9 @@ content = content.replace(/ASTRO_ESCAPED_LEFT_CURLY_BRACKET/g, '{')
   .footnotes {
     ol {
       margin-left: 1em;
+      li {
+        font-size: var(--s1);
+      }
     }
   }
 
