Feat: Improve link hover

--- a/web/src/components/FlashlightEffect/FlashlightEffect.module.scss
+++ b/web/src/components/FlashlightEffect/FlashlightEffect.module.scss
@@ -18,11 +18,7 @@
   pointer-events: none;
 
   transform-origin: center center;
-  transform: translate3d(
-    calc(var(--mouseX) * 100vw),
-    calc(var(--mouseY) * 100vh),
-    0
-  );
+  transform: translate3d(calc(var(--mouseX) * 100vw), calc(var(--mouseY) * 100vh), 0);
 }
 
 :global(.cast-shadow) {
@@ -34,15 +30,10 @@
   border-radius: inherit;
   z-index: -1;
 
-  box-shadow: 0 2.8px 2.2px
-      hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.03)),
-    0 0px 5px 5px
-      hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.01)),
-    0 12.5px 10px
-      hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.02)),
-    0 22.3px 17.9px
-      hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.02)),
-    0 41.8px 33.4px
-      hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.03)),
+  box-shadow: 0 2.8px 2.2px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.03)),
+    0 0px 5px 5px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.01)),
+    0 12.5px 10px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.02)),
+    0 22.3px 17.9px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.02)),
+    0 41.8px 33.4px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.03)),
     0 100px 80px hsl(var(--surface-shadow) / var(--shadow-strength));
 }
