--- a/web/src/components/Card/Card.module.scss
+++ b/web/src/components/Card/Card.module.scss
@@ -22,7 +22,7 @@ $cardHeight: 280px;
   &:focus {
     .avatar img {
       filter: grayscale(0);
-      transform: scale(1.05);
+      transform: scale(1.025);
     }
     .avatar::after {
       opacity: 1;
@@ -64,7 +64,7 @@ $cardHeight: 280px;
     object-fit: cover;
 
     filter: grayscale(1);
-    transition: filter 200ms ease, transform 250ms ease-out;
+    transition: filter 200ms ease-out, transform 250ms ease-out;
   }
 
   /**
@@ -146,4 +146,21 @@ $cardHeight: 280px;
   @include helpers.text-truncate(2, 2);
 
   margin: 0;
+}
+
+:global(.cast-shadow) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  z-index: -1;
+
+  box-shadow: 0 2.8px 2.2px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.03)),
+    0 0px 5px 5px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.01)),
+    0 12.5px 10px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.02)),
+    0 22.3px 17.9px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.02)),
+    0 41.8px 33.4px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + 0.03)),
+    0 100px 80px hsl(var(--surface-shadow) / var(--shadow-strength));
 }
