--- a/web/src/layouts/Post/Post.astro
+++ b/web/src/layouts/Post/Post.astro
@@ -27,6 +27,7 @@ function resolveRelativeToCwd( path: string ) {
   return relativeToPagePath;
 }
 
+/** Relative images */
 const transformRelativeImagePath = buildHTMLTransformerFn( 'img[src^="./"]',  (el,ctx) => {
   const targetPath = dirname(page.abspath);
   const relativeTargetPath = resolveRelativeToCwd( targetPath );
@@ -34,7 +35,14 @@ const transformRelativeImagePath = buildHTMLTransformerFn( 'img[src^="./"]',  (e
   el.attr('src', Astro.resolve(relativeTargetPath + src.slice(1)) );
 });
 
+/** Open links in new page  */
+const transformFootnoteLinks = buildHTMLTransformerFn( 'a:not([href^="/"])', (el, ctx) => {
+  el.attr('target','_blank');
+  el.attr('rel',"noopener noreferrer");
+});
+
 let content = transformRelativeImagePath( page.content.content );
+content = transformFootnoteLinks( content );
 content = content.replace(/ASTRO_ESCAPED_LEFT_CURLY_BRACKET/g, '{')
 
 ---
