--- a/web/src/components/Layout/Layout.astro
+++ b/web/src/components/Layout/Layout.astro
@@ -34,6 +34,6 @@
 
 .footer {
   color: var(--text1-invert);
-  background-color: var(--brand);
+  background-color: var(--surface2-dark);
 }
 </style>
