--- a/web/src/styles/_colorscheme.scss
+++ b/web/src/styles/_colorscheme.scss
@@ -4,16 +4,14 @@
   --brand-lightness: 63%;
 
   /* light */
-  --brand-light: hsl(
-    var(--brand-hue) var(--brand-saturation) var(--brand-lightness)
-  );
+  --brand-light: hsl(var(--brand-hue) var(--brand-saturation) var(--brand-lightness));
   --brand2-light: hsl(153 33% 32%);
 
   --text1-light: hsl(var(--brand-hue) var(--brand-saturation) 10%);
   --text2-light: hsl(var(--brand-hue) 30% 30%);
 
   --surface1-light: hsl(var(--brand-hue) 20% 99%);
-  --surface2-light: hsl(var(--brand-hue) 20% 85%);
+  --surface2-light: hsl(var(--brand-hue) 30% 85%);
   --surface3-light: hsl(var(--brand-hue) 50% 92%);
   --surface4-light: hsl(var(--brand-hue) 96% 90%);
 
@@ -21,10 +19,7 @@
   --shadow-strength-light: 0.02;
 
   /* dark */
-  --brand-dark: hsl(
-    var(--brand-hue) calc(var(--brand-saturation) / 2)
-      calc(var(--brand-lightness) / 1.5)
-  );
+  --brand-dark: hsl(var(--brand-hue) calc(var(--brand-saturation) / 2) calc(var(--brand-lightness) / 1.5));
   --text1-dark: hsl(var(--brand-hue) 15% 98%);
   --text2-dark: hsl(var(--brand-hue) 5% 65%);
   --surface1-dark: hsl(var(--brand-hue) 10% 10%);
@@ -35,10 +30,7 @@
   --shadow-strength-dark: 0.8;
 
   /* dim */
-  --brand-dim: hsl(
-    var(--brand-hue) calc(var(--brand-saturation) / 1.25)
-      calc(var(--brand-lightness) / 1.25)
-  );
+  --brand-dim: hsl(var(--brand-hue) calc(var(--brand-saturation) / 1.25) calc(var(--brand-lightness) / 1.25));
   --text1-dim: hsl(var(--brand-hue) 15% 75%);
   --text2-dim: hsl(var(--brand-hue) 10% 61%);
   --surface1-dim: hsl(var(--brand-hue) 10% 20%);
@@ -49,7 +41,7 @@
   --shadow-strength-dim: 0.2;
 }
 
-[color-scheme="light"] {
+[color-scheme='light'] {
   color-scheme: light;
 
   --brand: var(--brand-light);
@@ -63,7 +55,7 @@
   --shadow-strength: var(--shadow-strength-light);
 }
 
-[color-scheme="dark"] {
+[color-scheme='dark'] {
   color-scheme: dark;
 
   --brand: var(--brand-dark);
@@ -77,7 +69,7 @@
   --shadow-strength: var(--shadow-strength-dark);
 }
 
-[color-scheme="dim"] {
+[color-scheme='dim'] {
   color-scheme: dark;
 
   --brand: var(--brand-dim);
