--- a/web/src/components/Garden/GardenList.module.scss
+++ b/web/src/components/Garden/GardenList.module.scss
@@ -29,11 +29,10 @@
 .garden-item {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  flex-wrap: wrap;
 
   :global(.tag) {
     font-style: normal;
-    margin-inline-start: 0;
     padding: calc(2 * var(--gap));
   }
 
@@ -43,7 +42,7 @@
 
   /** Adjacent tags */
   :global(.tag + .tag) {
-    margin-left: var(--gap);
+    margin-inline-start: 1rem;
   }
 }
 
@@ -51,11 +50,26 @@
   @include h.link-text;
 }
 
-.title {
+.item-title {
   @include h.weight(var(--text-weight));
   margin-block-start: 0;
   margin-block-end: 0;
   margin-right: auto;
+
+  flex: 1 1 70%;
+}
+
+:global(.extra-container) {
+  flex: 1 1 30%;
+  text-align: right;
+  & * + * {
+    margin-inline-start: 1rem;
+  }
+}
+
+.item-subtitle {
+  flex: 1 1 100%;
+  padding-inline-start: var(--gap);
 }
 
 :global(.tags-container) {
@@ -63,15 +77,4 @@
   align-items: center;
   margin-block-start: 0;
   margin-block-end: 0;
-}
-
-:global(.extra-container) {
-  display: inline-flex;
-  align-items: center;
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
-
-:global(.tags-container + .extra-container) {
-  margin-left: 1em;
 }
