--- a/web/src/components/Header/Header.module.scss
+++ b/web/src/components/Header/Header.module.scss
@@ -27,17 +27,18 @@
 .branding {
   font-size: var(--h5);
   font-weight: var(--title-weight);
-  flex: 1;
+  flex: 1 1 100%;
 
   & > a {
-    display: inline-block;
-    padding: 0.5em;
+    display: inline-flex;
     color: inherit;
-    text-decoration: none;
+    transform: scale(1);
+    transition: color 200ms ease-out, transform 150ms ease-out;
 
     @media (hover: hover) {
       &:hover {
         color: var(--brand);
+        transform: scale(1.1);
       }
     }
   }
@@ -67,11 +68,11 @@ a.skipMain:focus {
   margin: 0 35%;
   padding: var(--gap);
 
-  font-size: var(--s0);
+  font-size: var(--h3);
+  font-weight: bold;
 
   outline: 3px solid inherit;
   text-align: center;
-  z-index: 999;
 }
 
 .toggleNavButton {
