--- a/web/src/styles/_base.scss
+++ b/web/src/styles/_base.scss
@@ -92,6 +92,16 @@ body {
   margin: 0 auto;
 }
 
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 .pad4 {
   padding: calc(var(--gap) * 4) calc(var(--gap) * 4);
 }
