--- a/web/src/layouts/Post/Post.astro
+++ b/web/src/layouts/Post/Post.astro
@@ -94,7 +94,7 @@ content = content.replace(/ASTRO_ESCAPED_LEFT_CURLY_BRACKET/g, '{')
     align-items: center;
     justify-content: flex-start;
 
-    margin-block-start: 3em;
+    margin-block-start: 20%;
 
     .date-container, .tags-container {
       display: flex;
