--- a/web/src/components/Header/Header.module.scss
+++ b/web/src/components/Header/Header.module.scss
@@ -29,6 +29,9 @@
   font-weight: var(--title-weight);
   flex: 1 1 100%;
 
+  display: flex;
+  align-items: center;
+
   & > a {
     display: inline-flex;
     color: inherit;
@@ -82,7 +85,6 @@ a.skipMain:focus {
   border: none;
   background: none;
   margin: 0;
-  padding: calc(0.5 * 1rem);
   color: inherit;
 
   & svg {
