Santify anim helper .clamp-line to .line-clamp global

--- a/web/src/styles/_base.scss
+++ b/web/src/styles/_base.scss
@@ -205,3 +205,12 @@ body {
     margin-right: auto;
   }
 }
+
+/**
+ * Clamp line for animation
+ */
+.line-clamp {
+  position: relative;
+  overflow: hidden;
+  text-align: start;
+}
