Consistent Tables and hr spacing for Project/Post

--- a/web/src/layouts/Post/Post.astro
+++ b/web/src/layouts/Post/Post.astro
@@ -270,6 +270,7 @@ content = content.replace(/ASTRO_ESCAPED_LEFT_CURLY_BRACKET/g, '{')
     border-spacing: 0px;
     border-top: 0px;
     overflow: hidden;
+    table-layout: fixed;
 
     thead {
       background-color: var(--brand);
