--- a/web/src/layouts/Project/Project.astro
+++ b/web/src/layouts/Project/Project.astro
@@ -36,8 +36,8 @@ let page:Page = toPage({
 
 <style lang="scss" global>
 @use "sass:math";
-
 @use "src/styles/grids" as grids;
+@use "src/styles/breakpoints" as bp;
 @use "src/styles/helpers" as h;
 
 .project-masthead {
@@ -45,6 +45,10 @@ let page:Page = toPage({
     max-width: 80vw;
     padding-left: 0;
     padding-right: 0;
+
+    @include bp.breakpoint(small, max) {
+      max-width: 90vw;
+    }
   }
 }
 .project-masthead.full-width {
@@ -59,8 +63,8 @@ let page:Page = toPage({
   position: relative;
 
   &:not(.full-width) {
-    width: 75vw;
-    width: clamp(16rem, 75vw, 90rem);
+    width: 80vw;
+    width: clamp(16rem, 80vw, 90rem);
     margin: 3em auto;
   }
 
