--- a/web/src/styles/_colorscheme.scss
+++ b/web/src/styles/_colorscheme.scss
@@ -4,6 +4,7 @@
   --brand-lightness: 63%;
 
   /* light */
+  --nice: #fedfce;
   --brand-light: hsl(var(--brand-hue) var(--brand-saturation) var(--brand-lightness));
   --brand2-light: hsl(153 33% 32%);
 
