--- a/web/src/styles/_base.scss
+++ b/web/src/styles/_base.scss
@@ -39,6 +39,10 @@
   --surface2: var(--surface2-light);
   --surface3: var(--surface3-light);
   --surface4: var(--surface4-light);
+  --surface1-invert: var(--surface1-dark);
+  --surface2-invert: var(--surface2-dark);
+  --surface3-invert: var(--surface3-dark);
+  --surface4-invert: var(--surface4-dark);
   --surface-shadow: var(--surface-shadow-light);
   --shadow-strength: var(--shadow-strength-light);
 
@@ -214,3 +218,14 @@ body {
   overflow: hidden;
   text-align: start;
 }
+
+// ::-webkit-scrollbar {
+//   width: 8px;
+//   border-radius: 10px;
+//   background-color: transparent;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//   background-color: rgb(21 20 26 / 63%);
+//   border-radius: 10px;
+// }
