--- a/web/src/styles/_typo.scss
+++ b/web/src/styles/_typo.scss
@@ -6,7 +6,7 @@
 
 :root {
   --unit: 18px;
-  --scale: 1.250 /** minor third */;
+  --scale: 1.25 /** minor third */;
 
   --text-lineheight: 1.5;
   --text-weight: 300;
@@ -20,7 +20,7 @@
   --title-lineheight: 1.3;
   --title-weight: 900;
 
-  --subtitle-family: var(--title-family;)
+  --subtitle-family: var(--title-family);
   --subtitle-lineheight: 1.3;
   --subtitle-weight: 200;
 
@@ -82,19 +82,24 @@ h5,
 }
 
 /** Variants size */
-h1,.title1 {
+h1,
+.title1 {
   font-size: var(--h1);
 }
-h2,.title2 {
+h2,
+.title2 {
   font-size: var(--h2);
 }
-h3,.title3 {
+h3,
+.title3 {
   font-size: var(--h3);
 }
-h4,.title4 {
+h4,
+.title4 {
   font-size: var(--h4);
 }
-h5,.title5 {
+h5,
+.title5 {
   font-size: var(--h5);
 }
 
